--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <header class="hero">
     <div class="hero-content">
         <h1>Karina & David</h1>
-        <p>Le grand jour : 06 Juin 2026</p>
+        <p class="date">20 octobre 2026 · Séville, Espagne</p>
+        <p class="intro">
+            Sous le soleil andalou, au cœur de Séville,  
+            nous avons la joie de vous inviter à célébrer  
+            l’un des plus beaux jours de notre vie.
+        </p>
     </div>
 </header>
 
