--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<!-- MENU LOGO -->
+<!-- MENU -->
 <div class="menu-button" onclick="toggleMenu()">
-    <img src="images/logo-menu.png" alt="Menu Karina & David">
+    <img src="images/logo-menu.png" alt="Menu">
 </div>
 
 <nav class="menu-dropdown" id="menu">
@@ -88,7 +88,7 @@
 
 </div>
 
-<!-- INFOS PRATIQUES + PRÉSENCE -->
+<!-- INFOS + PRÉSENCE -->
 <div class="infos-wrapper">
 
     <section id="infos" class="section infos">
@@ -122,7 +122,6 @@
 function toggleMenu() {
     document.getElementById("menu").classList.toggle("open");
 }
-
 function closeMenu() {
     document.getElementById("menu").classList.remove("open");
 }
